kubernetes/postgres-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-client
  labels:
    name: postgres-client
spec:
  containers:
  - name: postgres-client
    image: alpine:latest
    command: ["tail", "-f", "/dev/null"]

# apk --update add postgresql-client
