kubernetes/ingress-examples.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-with-rewrite-uri
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /new/$2
spec:
  rules:
    - host: www.example.com
      http:
        paths:
          - path: /old(/|$)(.*)
            backend:
              serviceName: backend
              servicePort: 80
